# cornerstone-observability

./: .cornerstone  .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/: .last_sync
.agents/skills/software/architecture/adr-writer/: SKILL.md
.gemini/: settings.json
.github/workflows/: ci.yml  deploy-vps.yml
alembic/: env.py
app/: config.py  db.py  main.py
app/routers/: health.py  ingest.py  query.py
cli/: report.py
dashboard/static/: index.html
deploy/vps/: docker-compose.yml
