[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cornerstone-observability"
version = "1.0.0"
description = "Central telemetry service and CLI for Cornerstone — DeAcero Agentic CI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[project.scripts]
cornerstone-obs = "cli.report:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "pylint",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
